<resources>
    <string name="app_name">FamilyBudgetApp</string>
    <string name="placeholder">Placeholder</string>
    <string name="details">Details</string>
    <string name="personal_budget">Personal Budget</string>
    <string name="expenses_details">Detailed expenses</string>
    <string name="income_details">Detailed income</string>
    <string name="family_budget">Family Budget</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="yearly_info">Yearly info</string>
    <string name="add_moneyBox">Add Moneybox</string>
    <string name="moneybox">Show Moneyboxes</string>
    <string name="back">Go back</string>
    <string name="reason">Reason</string>
    <string name="target_amount">Target amount</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="add">add</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string-array name="recurrence_periods">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="surplus_detailed">Detailed Surplus</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="display_name">Display name</string>
    <string name="family_name">Family name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_member">"add member"</string>

    <string name="users_management">"Users management"</string>
    <string name="activity_member_management">activity_member_management</string>
    <string name="family_members">Family Members</string>
    <string name="homepage">Homepage</string>

    <string name="cashFlowCategories">Cash Flow Categories</string>
    <string name="limit">Limit</string>
    <string name="name">Name</string>

    <string name="global_stats">Global Statistics</string>
    <string name="stat_title_monthly">Percentage of families with positive surplus per month</string>
    <string name="stat_title_yearly">Percentage of families with at least a set amount of yearly saving per year</string>
    <string name="surplus_allocate">Allocate previous surplus</string>

    <string name="cashFlow_categories">Cash Flow Categories</string>

</resources>