<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="192dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_target" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="192dp"
        android:text="@string/save"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/text_target" />

    <TextView
        android:id="@+id/text_reason"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:text="@string/reason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_target"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="@string/target_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_reason" />

    <EditText
        android:id="@+id/edit_text_reason"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/text_reason"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_target"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/text_target"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_reason" />

</androidx.constraintlayout.widget.ConstraintLayout>